--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
               PDFを確認する
             </button>
             <br>
-            <button onclick="window.location.href='index.html'"
+            <button onclick="window.location.href='https://acrobat.adobe.com/id/urn:aaid:sc:ap:ba80de73-e658-4606-8fba-b499cc6bb3b6'"
                     style="background:transparent; color:#32a9cd; border:2px solid #32a9cd;
                            padding:0.8em 2.5em; font-size:1em; border-radius:25px; cursor:pointer;">
               ホームに戻る
