--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
           <div style="background:linear-gradient(135deg, #f8fbfc 0%, #e8f4f8 100%); padding:3em; border-radius:12px; border:2px solid #32a9cd;">
             <h1 style="color:#003366; font-size:2.5em; margin-bottom:1em;">落丁部分のPDFを<br>送信しました</h1>
             <p style="color:#32a9cd; font-size:1.2em; margin-bottom:2em;">下記のボタンからご確認いただけます。</p>
-            <button onclick="window.location.href='gazou/067.jpg'"
+            <button onclick="window.location.href='https://acrobat.adobe.com/id/urn:aaid:sc:ap:ba80de73-e658-4606-8fba-b499cc6bb3b6'"
                     style="background:linear-gradient(135deg, #32a9cd 0%, #267fa1 100%);
                            color:white; border:none; padding:1em 3em;
                            font-size:1.2em; border-radius:25px; cursor:pointer; margin-bottom:1em;">
