--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       padding: 0;
     }
 
- /* ヘッダー */
+/* ヘッダー */
     header {
       display: flex;
       justify-content: space-between;
@@ -90,10 +90,11 @@
       margin: 2em auto;
       padding: 0 1em;
     }
-   /* ページタイトル */
+
+    /* ページタイトル */
     .page-title {
       text-align: center;
-      margin: 2em 0 3em 0;
+      margin: 2em 0;
       padding: 1em;
       background: linear-gradient(135deg, #f8fbfc 0%, #e8f4f8 100%);
       border-radius: 8px;
