--- a/index.html
+++ b/index.html
@@ -326,13 +326,13 @@
             <option value="RPGさんぽ入門">RPGさんぽ入門</option>
             <option value="コンクールとコンテスト">コンクールとコンテスト</option>
             <option value="鳥の目 虫の目 魚の目">鳥の目 虫の目 魚の目</option>
-            <option value="やり切る力の育て方">やり切る力の育て方</option>
+            <option value="やり切る力の育て方">光輪-Nimbus-</option>
             <option value="What is Brown noise?">What is Brown noise?</option>
             <option value="ひのまる構図">ひのまる構図</option>
             <option value="黒子を星座に">黒子を星座に</option>
             <option value="RPGさんぽ概説">RPGさんぽ概説</option>
-            <option value="日本の顔スポット">日本の顔スポット</option>
-            <option value="彼方の奥太">彼方の奥太</option>
+            <option value="日本の鏡スポット">日本の鏡スポット</option>
+            <option value="千年幸福論">千年幸福論</option>
             <option value="カレーのご飯は冷たい方が美味しい">カレーのご飯は冷たい方が美味しい</option>
             <option value="LIMINAL SPACE 100">LIMINAL SPACE 100</option>
             <option value="花火禁止区域ができるまで">花火禁止区域ができるまで</option>
