--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@ body {
     nav a:hover {
       color: #32a9cd;
     }
+    nav a.active {
+      color: #32a9cd;
+      border-bottom: 2px solid #32a9cd;
+    }
 /* コンテンツ */
     .content {
   max-width: 1000px;
@@ -297,9 +301,8 @@ body {
       color: #ffffff;
       text-align: center;
       padding: 1em;
-      margin-top: 3em;
       flex-shrink: 0;
- 　　 margin-top: auto;
+      margin-top: auto;
     }
 
     /* レスポンシブ */
@@ -354,7 +357,7 @@ body {
             <option value="RPGさんぽ入門">RPGさんぽ入門</option>
             <option value="コンクールとコンテスト">コンクールとコンテスト</option>
             <option value="鳥の目 虫の目 魚の目">鳥の目 虫の目 魚の目</option>
-            <option value="やり切る力の育て方">光輪-Nimbus-</option>
+            <option value="光輪-Nimbus-">光輪-Nimbus-</option>
             <option value="What is Brown noise?">What is Brown noise?</option>
             <option value="ひのまる構図">ひのまる構図</option>
             <option value="黒子を星座に">黒子を星座に</option>
@@ -419,7 +422,7 @@ body {
 
           <div class="form-group">
             <label for="page_number">ページ番号<span class="required">*必須</span></label>
-            <input type="number" name="page_number" id="page_number" placeholder="該当するページ番号を入力(例:002p,003pが落ちている場合は[002003]と入力)" min="1">
+            <input type="number" name="page_number" id="page_number" placeholder="該当するページ番号を入力" min="1">
           </div>
         </div>
 
@@ -442,7 +445,6 @@ body {
   </footer>
 
   <script>
-    // ラジオボタン選択処理
     function selectRadio(name, value) {
       document.querySelectorAll(`input[name="${name}"]`).forEach(radio => {
         radio.closest('.radio-item').classList.remove('selected');
@@ -467,7 +469,6 @@ body {
       }
     }
 
-    // フォーム送信処理
     document.getElementById('contactForm').addEventListener('submit', function(e) {
       e.preventDefault();
       const inquiryType = document.querySelector('input[name="inquiry_type"]:checked')?.value;
@@ -483,82 +484,85 @@ body {
           bookTitle === 'LIMINAL SPACE 100' &&
           issueType === 'binding' &&
           pageNumber === '148149') {
-        showPDFConfirmPage(); // 確認画面を表示
+        showPDFConfirmPage();
       } else {
         showThankYouPage();
       }
     });
 
-    // 落丁PDF確認画面
     function showPDFConfirmPage() {
       document.body.innerHTML = `
-        <header style="display: flex; justify-content: space-between; align-items: center; padding: 1em 2em; background-color: #32a9cd; color: #fff;">
-  <div class="title-wrapper" style="display: flex; flex-direction: column;">
-    <h1 style="margin: 0; font-size: 3em; letter-spacing: 0.1em; line-height: 1; border: none; font-family: 'Tsunagi Gothic Black', sans-serif; font-weight: 700; color: #fff;">狭間書房</h1>
-    <p style="margin: 0; padding: 0; line-height: 1; font-size: 1em; text-align: center; color: #fff;">Hazama Publishing</p>
-  </div>
-  <div class="search" style="display: flex; align-items: center;">
-    <form action="https://hazamashobo.github.io/result/" method="get" style="display: flex; align-items: center;">
-      <input type="text" name="q" placeholder="キーワード入力" style="padding: 4px; border: 2px solid #003366; border-radius: 4px; width: 150px; background-color: #fff; color: #003366;">
-      <button type="submit" style="padding: 4px 6px; margin-left: 4px; border-radius: 4px; border: none; background-color: #003366; color: #fff; cursor: pointer;">検索</button>
-    </form>
-  </div>
-</header>
-        <div style="max-width:600px; margin:4em auto; padding:2em; text-align:center;">
-          <div style="background:linear-gradient(135deg, #f8fbfc 0%, #e8f4f8 100%); padding:3em; border-radius:12px; border:2px solid #32a9cd;">
-            <h1 style="color:#003366; font-size:2.5em; margin-bottom:1em;">落丁部分のPDFを<br>送信しました</h1>
-            <p style="color:#32a9cd; font-size:1.2em; margin-bottom:2em;">下記のボタンからご確認いただけます。</p>
-            <button onclick="window.location.href='https://acrobat.adobe.com/id/urn:aaid:sc:AP:ac520bd2-d7ca-4718-8091-96ab9de9e312'"
-                    style="background:linear-gradient(135deg, #32a9cd 0%, #267fa1 100%);
-                           color:white; border:none; padding:1em 3em;
-                           font-size:1.2em; border-radius:25px; cursor:pointer; margin-bottom:1em;">
-              PDFを確認する
-            </button>
-            <br>
-            <button onclick="window.location.href='https://acrobat.adobe.com/id/urn:aaid:sc:ap:ba80de73-e658-4606-8fba-b499cc6bb3b6'"
-                    style="background:transparent; color:#32a9cd; border:2px solid #32a9cd;
-                           padding:0.8em 2.5em; font-size:1em; border-radius:25px; cursor:pointer;">
-              ホームに戻る
-            </button>
+        <header style="display: flex; justify-content: space-between; align-items: center; padding: 1em 2em; background-color: #32a9cd; color: #fff; flex-shrink: 0;">
+          <div style="display: flex; flex-direction: column;">
+            <h1 style="margin: 0; font-size: 3em; letter-spacing: 0.1em; line-height: 1; border: none; font-family: 'Tsunagi Gothic Black', sans-serif; font-weight: 700; color: #fff;">狭間書房</h1>
+            <p style="margin: 0; padding: 0; line-height: 1; font-size: 1em; text-align: center; color: #fff;">Hazama Publishing</p>
+          </div>
+          <div style="display: flex; align-items: center;">
+            <form action="https://hazamashobo.github.io/result/" method="get" style="display: flex; align-items: center;">
+              <input type="text" name="q" placeholder="キーワード入力" style="padding: 4px; border: 2px solid #003366; border-radius: 4px; width: 150px; background-color: #fff; color: #003366;">
+              <button type="submit" style="padding: 4px 6px; margin-left: 4px; border-radius: 4px; border: none; background-color: #003366; color: #fff; cursor: pointer;">検索</button>
+            </form>
+          </div>
+        </header>
+        <div style="flex: 1; display: flex; align-items: center; justify-content: center; padding: 2em;">
+          <div style="max-width:600px; width:100%; text-align:center;">
+            <div style="background:linear-gradient(135deg, #f8fbfc 0%, #e8f4f8 100%); padding:3em; border-radius:12px; border:2px solid #32a9cd;">
+              <h1 style="color:#003366; font-size:2.5em; margin-bottom:1em;">落丁部分のPDFを<br>送信しました</h1>
+              <p style="color:#32a9cd; font-size:1.2em; margin-bottom:2em;">下記のボタンからご確認いただけます。</p>
+              <button onclick="window.location.href='https://acrobat.adobe.com/id/urn:aaid:sc:AP:ac520bd2-d7ca-4718-8091-96ab9de9e312'"
+                      style="background:linear-gradient(135deg, #32a9cd 0%, #267fa1 100%);
+                             color:white; border:none; padding:1em 3em;
+                             font-size:1.2em; border-radius:25px; cursor:pointer; margin-bottom:1em; width:100%;">
+                PDFを確認する
+              </button>
+              <br>
+              <button onclick="window.location.href='https://hazamashobo.github.io/main/index.html'"
+                      style="background:transparent; color:#32a9cd; border:2px solid #32a9cd;
+                             padding:0.8em 2.5em; font-size:1em; border-radius:25px; cursor:pointer; width:100%;">
+                ホームに戻る
+              </button>
+            </div>
           </div>
         </div>
-       <footer style="background-color: #32a9cd; color: #ffffff; text-align: center; padding: 1em; flex-shrink: 0; margin-top: auto;">
-  <p>© 2025 狭間書房　（5/33）</p>
-</footer>;
+        <footer style="background-color: #32a9cd; color: #ffffff; text-align: center; padding: 1em; flex-shrink: 0;">
+          <p>© 2025 狭間書房　（5/33）</p>
+        </footer>
+      `;
     }
 
-    // 通常完了ページ
     function showThankYouPage() {
       document.body.innerHTML = `
-       <header style="display: flex; justify-content: space-between; align-items: center; padding: 1em 2em; background-color: #32a9cd; color: #fff;">
-  <div class="title-wrapper" style="display: flex; flex-direction: column;">
-    <h1 style="margin: 0; font-size: 3em; letter-spacing: 0.1em; line-height: 1; border: none; font-family: 'Tsunagi Gothic Black', sans-serif; font-weight: 700; color: #fff;">狭間書房</h1>
-    <p style="margin: 0; padding: 0; line-height: 1; font-size: 1em; text-align: center; color: #fff;">Hazama Publishing</p>
-  </div>
-  <div class="search" style="display: flex; align-items: center;">
-    <form action="https://hazamashobo.github.io/result/" method="get" style="display: flex; align-items: center;">
-      <input type="text" name="q" placeholder="キーワード入力" style="padding: 4px; border: 2px solid #003366; border-radius: 4px; width: 150px; background-color: #fff; color: #003366;">
-      <button type="submit" style="padding: 4px 6px; margin-left: 4px; border-radius: 4px; border: none; background-color: #003366; color: #fff; cursor: pointer;">検索</button>
-    </form>
-  </div>
-</header>
-        <div style="max-width:600px; margin:4em auto; padding:2em; text-align:center;">
-          <div style="background:linear-gradient(135deg, #f8fbfc 0%, #e8f4f8 100%); padding:3em; border-radius:12px; border:2px solid #32a9cd;">
-            <h1 style="color:#003366; font-size:2.5em; margin-bottom:1em;">お問い合わせ<br>ありがとうございました</h1>
-            <p style="color:#32a9cd; font-size:1.2em; margin-bottom:2em;">担当者が確認いたします。</p>
-            <button onclick="window.location.href='index.html'"
-                    style="background:linear-gradient(135deg, #32a9cd 0%, #267fa1 100%);
-                           color:white; border:none; padding:1em 3em;
-                           font-size:1.2em; border-radius:25px; cursor:pointer;">
-              ホームに戻る
-            </button>
+        <header style="display: flex; justify-content: space-between; align-items: center; padding: 1em 2em; background-color: #32a9cd; color: #fff; flex-shrink: 0;">
+          <div style="display: flex; flex-direction: column;">
+            <h1 style="margin: 0; font-size: 3em; letter-spacing: 0.1em; line-height: 1; border: none; font-family: 'Tsunagi Gothic Black', sans-serif; font-weight: 700; color: #fff;">狭間書房</h1>
+            <p style="margin: 0; padding: 0; line-height: 1; font-size: 1em; text-align: center; color: #fff;">Hazama Publishing</p>
+          </div>
+          <div style="display: flex; align-items: center;">
+            <form action="https://hazamashobo.github.io/result/" method="get" style="display: flex; align-items: center;">
+              <input type="text" name="q" placeholder="キーワード入力" style="padding: 4px; border: 2px solid #003366; border-radius: 4px; width: 150px; background-color: #fff; color: #003366;">
+              <button type="submit" style="padding: 4px 6px; margin-left: 4px; border-radius: 4px; border: none; background-color: #003366; color: #fff; cursor: pointer;">検索</button>
+            </form>
+          </div>
+        </header>
+        <div style="flex: 1; display: flex; align-items: center; justify-content: center; padding: 2em;">
+          <div style="max-width:600px; width:100%; text-align:center;">
+            <div style="background:linear-gradient(135deg, #f8fbfc 0%, #e8f4f8 100%); padding:3em; border-radius:12px; border:2px solid #32a9cd;">
+              <h1 style="color:#003366; font-size:2.5em; margin-bottom:1em;">お問い合わせ<br>ありがとうございました</h1>
+              <p style="color:#32a9cd; font-size:1.2em; margin-bottom:2em;">担当者が確認いたします。</p>
+              <button onclick="window.location.href='https://hazamashobo.github.io/main/index.html'"
+                      style="background:linear-gradient(135deg, #32a9cd 0%, #267fa1 100%);
+                             color:white; border:none; padding:1em 3em;
+                             font-size:1.2em; border-radius:25px; cursor:pointer; width:100%;">
+                ホームに戻る
+              </button>
+            </div>
           </div>
         </div>
-       <footer style="background-color: #32a9cd; color: #ffffff; text-align: center; padding: 1em; flex-shrink: 0; margin-top: auto;">
-       <p>© 2025 狭間書房　（6/33）</p>
-</footer>;
+        <footer style="background-color: #32a9cd; color: #ffffff; text-align: center; padding: 1em; flex-shrink: 0;">
+          <p>© 2025 狭間書房　（6/33）</p>
+        </footer>
+      `;
     }
   </script>
 </body>
 </html>
-
