--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@ body {
           </div>
         </div>
         <footer style="background-color: #32a9cd; color: #ffffff; text-align: center; padding: 1em; flex-shrink: 0;">
-          <p>© 2025 狭間書房　（6/33）</p>
+          <p>© 2025 狭間書房　（-/33）</p>
         </footer>
       `;
     }
