--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>お問い合わせ | 狭間書房</title>
  <style>
-  /* 基本設定：index(34)に準拠 */
+  /* 1. index(34)から完全に継承するベースデザイン */
   html, body {
     height: 100%;
     margin: 0;
@@ -21,7 +21,6 @@
     flex-direction: column;
   }
 
-  /* ヘッダー：index(34)のデザインを再現 */
   header {
     display: flex;
     justify-content: space-between;
@@ -56,7 +55,7 @@
     line-height: 1;
   }
 
-  /* 検索：index(34)のデザイン */
+  /* 2. 検索フォーム：index(34)と完全に同じ指定 */
   .search form {
     display: flex;
     align-items: center;
@@ -66,6 +65,8 @@
     border: 2px solid #003366;
     border-radius: 4px;
     width: 150px;
+    background-color: #fff;
+    color: #003366;
   }
   .search button {
     padding: 4px 6px;
@@ -77,7 +78,6 @@
     cursor: pointer;
   }
 
-  /* ナビゲーション：index(34)の横並びデザインを完全再現 */
   nav {
     text-align: center;
     padding: 1em 0;
@@ -95,7 +95,7 @@
     border-bottom: 2px solid #32a9cd;
   }
 
-  /* メインコンテンツ */
+  /* 3. コンテンツエリア */
   .content {
     max-width: 1000px;
     margin: 2em auto;
@@ -105,7 +105,6 @@
     box-sizing: border-box;
   }
 
-  /* ページタイトル */
   .page-title {
     text-align: center;
     margin: 2em 0;
@@ -116,7 +115,7 @@
   }
   .page-title h1 { color: #003366; font-size: 2.5em; margin: 0; }
 
-  /* フォーム要素 */
+  /* 4. フォーム装飾（PCでは元のボリューム感を維持） */
   .form-container {
     background-color: #fafafa;
     padding: 2em;
@@ -133,54 +132,35 @@
     box-sizing: border-box;
   }
 
-  /* ラジオボタン */
   .radio-group { display: flex; flex-direction: column; gap: 0.8em; }
   .radio-item { display: flex; align-items: center; padding: 0.8em; background-color: #fff; border: 2px solid #e0e0e0; border-radius: 8px; cursor: pointer; }
   .radio-item.selected { border-color: #32a9cd; background-color: #f0f8ff; }
   .conditional-section { display: none; margin-top: 1em; padding: 1.5em; background-color: #f0f8ff; border: 2px solid #32a9cd; border-radius: 8px; }
   .conditional-section.show { display: block; }
+  .submit-btn { background: linear-gradient(135deg, #32a9cd 0%, #267fa1 100%); color: white; border: none; padding: 1em 3em; font-size: 1.2em; font-weight: bold; border-radius: 25px; cursor: pointer; }
 
-  /* 送信ボタン */
-  .submit-btn {
-    background: linear-gradient(135deg, #32a9cd 0%, #267fa1 100%);
-    color: white; border: none; padding: 1em 3em; font-size: 1.2em; font-weight: bold; border-radius: 25px; cursor: pointer;
-  }
+  footer { background-color: #32a9cd; color: #ffffff; text-align: center; padding: 1em; margin-top: auto; }
 
-  footer {
-    background-color: #32a9cd;
-    color: #ffffff;
-    text-align: center;
-    padding: 1em;
-    margin-top: auto;
-  }
-
-  /* 完了画面用クラス */
-  .thanks-container {
-    background: linear-gradient(135deg, #f8fbfc 0%, #e8f4f8 100%);
-    padding: 3em; border-radius: 12px; border: 2px solid #32a9cd; text-align: center; width: 100%; max-width: 600px; box-sizing: border-box;
-  }
-
-  /* ★レスポンシブ：スマホ時のみ適用 */
+  /* ★5. スマホ時のみの差分設定（ここが重要） */
   @media (max-width: 768px) {
     header {
       padding: 1em;
-      flex-direction: column; /* スマホでは縦並びに */
+      flex-direction: column;
       gap: 15px;
     }
-    header h1 { font-size: 2em; } /* ロゴをスマホサイズに */
-    .search input { width: 200px; }
+    header h1 { font-size: 2em; } /* ロゴサイズのみスマホに最適化 */
+    .search input { width: 180px; } /* 検索窓の幅を微調整 */
     
     nav {
+      padding: 0.5em;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      padding: 0.5em;
     }
     nav a { margin: 0.3em 0.5em; font-size: 0.9em; }
 
     .page-title h1 { font-size: 1.8em; }
-    .thanks-container { padding: 2em 1em; }
-    .thanks-container h1 { font-size: 1.6em; }
+    .form-container { padding: 1.2em; }
   }
  </style>
 </head>
@@ -226,12 +206,12 @@
         <option value="ひのまる構図">ひのまる構図</option>
         <option value="黒子を星座に">黒子を星座に</option>
         <option value="RPGさんぽ概説">RPGさんぽ概説</option>
-        <option value="日本の顔スポット">日本の顔スポット</option>
+        <option value="日本の鏡スポット">日本の鏡スポット</option>
         <option value="千年幸福論">千年幸福論</option>
         <option value="カレーのご飯は冷たい方が美味しい">カレーのご飯は冷たい方が美味しい</option>
         <option value="LIMINAL SPACE 100">LIMINAL SPACE 100</option>
         <option value="花火禁止区域ができるまで">花火禁止区域ができるまで</option>
-        <option value="配刻しないために">配刻しないために</option>
+        <option value="遅刻しないために">遅刻しないために</option>
       </select>
     </div>
 
@@ -245,7 +225,7 @@
               <label for="book_issue">書籍に関する不備</label>
             </div>
             <div class="radio-item" onclick="selectRadio('inquiry_type', 'opinion')">
-              <input type="radio" name="inquiry_type" value="opinion" id="opinion">
+              <input type="radio" name="opinion" value="opinion" id="opinion">
               <label for="opinion">ご意見・ご感想</label>
             </div>
             <div class="radio-item" onclick="selectRadio('inquiry_type', 'other')">
@@ -268,7 +248,7 @@
           </div>
           <div class="form-group">
             <label for="page_number" style="color: #003366; font-weight: bold;">ページ番号<span style="color: #e74c3c; font-size: 0.9em; margin-left: 0.5em;">*必須</span></label>
-            <input type="number" name="page_number" id="page_number" placeholder="該当するページ番号を入力" min="1">
+            <input type="number" name="page_number" id="page_number" placeholder="該当するページ番号を入力（p.002,p.003が落丁している場合は「002003」と入力）" min="1">
           </div>
         </div>
 
@@ -289,6 +269,7 @@
   </footer>
 
   <script>
+    /* ロジック、完了画面表示は元のまま維持 */
     function selectRadio(name, value) {
       document.querySelectorAll(`input[name="${name}"]`).forEach(radio => {
         radio.closest('.radio-item').classList.remove('selected');
@@ -333,8 +314,8 @@
       document.getElementById('footer-text').innerText = '© 2025 狭間書房　（5/33）';
       mainContent.innerHTML = `
         <div style="display: flex; align-items: center; justify-content: center; min-height: 50vh;">
-          <div class="thanks-container">
-            <h1 style="color:#003366; line-height:1.3; margin-bottom:1em;">落丁部分のPDFを<br>送信しました</h1>
+          <div style="background:linear-gradient(135deg, #f8fbfc 0%, #e8f4f8 100%); padding:3em; border-radius:12px; border:2px solid #32a9cd; text-align:center; width:100%; max-width:600px;">
+            <h1 style="color:#003366; line-height:1.3; margin-bottom:1em; font-size:2em;">落丁部分のPDFを<br>送信しました</h1>
             <button onclick="window.location.href='https://acrobat.adobe.com/id/urn:aaid:sc:AP:ac520bd2-d7ca-4718-8091-96ab9de9e312'\"
                     class="submit-btn" style="width:100%;">PDFを確認する</button>
           </div>
@@ -347,8 +328,8 @@
       document.getElementById('footer-text').innerText = '© 2025 狭間書房　（-/33）';
       mainContent.innerHTML = `
         <div style="display: flex; align-items: center; justify-content: center; min-height: 50vh;">
-          <div class="thanks-container">
-            <h1 style="color:#003366; line-height:1.3; margin-bottom:1em;">お問い合わせ<br>ありがとうございました</h1>
+          <div style="background:linear-gradient(135deg, #f8fbfc 0%, #e8f4f8 100%); padding:3em; border-radius:12px; border:2px solid #32a9cd; text-align:center; width:100%; max-width:600px;">
+            <h1 style="color:#003366; line-height:1.3; margin-bottom:1em; font-size:2em;">お問い合わせ<br>ありがとうございました</h1>
             <p style="color:#32a9cd; font-size:1.2em; margin-bottom:2em;">担当者が確認いたします。</p>
             <button onclick="window.location.href='https://hazamashobo.github.io/main/index.html'\"
                     class="submit-btn" style="width:100%;">ホームに戻る</button>
